bases/radarr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.reynn.net`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: redirect-to-https
          namespace: default
  tls:
    secretName: reynn-net-cert
    options:
      name: recommended-tls-opts
